--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "heroicons": "^2.1.5",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
