--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-notifications": "^1.7.4",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.5"
   },
   "devDependencies": {
