--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "autoprefixer": "^10.4.19",
+    "framer-motion": "^11.11.8",
     "heroicons": "^2.1.5",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
